# Checkers

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: CheckersField.hpp  Play.hpp  Player.hpp
src/: CMakeLists.txt  CheckersField.cpp  CheckersFiled.cpp  Play.cpp  Player.cpp
